[tool.poetry]
name = "llab"
version = "0.1.0"
description = ""
authors = ["Jihoon Kim <jihoonerd@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
langgraph = "^0.2.0"
langchain-community = "^0.3.14"
langchain-anthropic = "^0.3.1"
langchain-openai = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
